# move_dynamixel

./: CMakeLists.txt  package.xml
include/: move_dynamixel.hpp
launch/: test.launch
src/: main.cpp  move_dynamixel.cpp
